SQLite should be good enough for a demo.

--- a/FluentQuery.Demo/FluentQuery.Demo.csproj
+++ b/FluentQuery.Demo/FluentQuery.Demo.csproj
@@ -9,4 +9,8 @@
       <ProjectReference Include="..\FluentQuery\FluentQuery.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="SQLite" Version="3.13.0" />
+    </ItemGroup>
+
 </Project>
